--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
   </footer>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="https://maps.google.com/maps/api/js"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyBTd2AoB6b1OBkweVjdRgBiIDTM8zl_5f8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.24/gmaps.min.js" integrity="sha256-C3vPkcHJk9t5Pi6C+Nc+faqv/EZZqNBnxoDfTXEorQk="
     crossorigin="anonymous"></script>
   <script src="./assets/main.bundle.js"></script>
